# ahess

./: .env  .env.example  Cargo.toml  README.md
.sqlx/: query-20354c259c9c0fafe68e3081df98dd97502c5adb12286d675e97068a1eecafbd.json  query-2ae694de42307a5427312dce4825af2ffce6c311f0c3163e280245caa02aebdc.json
db/changes/: 1__jobs-table.sql  7__test-2.sql
old/: Cargo.toml  README.md
old/.sqlx/: query-3714612107261934f5e6305f1d9e769b12ed01d5b354be911106de6887f4a515.json  query-953dbe29f5bd968c8db7638ae91dc3c610581c24ae39e2c9f6534e0046be2b08.json
old/src/: change_db.rs  db_pool.rs  generate_test.rs  job.rs  style.rs  tone.rs  worker.rs
old/src/run_ui/page/: mod.rs
src/: ahess_error.rs  ahess_result.rs  change_db.rs  generate_test.rs  job.rs  main.rs  new_db_change.rs  run_ui.rs  tone.rs  web_server.rs  worker.rs
src/run_ui/page/: new_score.rs
src/run_ui/view/: button.rs
