[package]
name = "ahess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.1"
clap = { version = "4.4.11", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.3", features = [ "postgres", "uuid", "runtime-async-std" ] }
