[package]
name = "ahess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dotenv = "0.15.0"
iced = "0.12.1"
rodio = "0.17.3"
sqlx = { version = "0.7.3", features = ["postgres", "uuid", "runtime-async-std", "time"] }
uuid = { version = "1.8.0", features = ["v7"] }
futures = '0.3.30'
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
